--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -79,7 +79,7 @@ When assessing CU status relative to abundance-based lower benchmarks, we use ge
 
 ### Proportional LRPs
 
-Proportional LRPs are calculated from the proportion of CUs within an SMU that are assessed as being above the Red status zone. To be consistent with the intent of the WSP of preserving biodiversity at the CU-level, we identify an LRP at 100% of CUs having status above Red (i.e., either Amber or Green). <!--CH Sue suggested removing as she wasn't sure what happened when LRP is breached, I think. I agree the act of breaching is not entirely relevant here, but I did think ht helped explain our propotion based LRP "When any individual CU falls into the Red zone, then the LRP is considered breached."--> See Section \@ref(guidelines) for a step-wise approach for identifying LRPs that further considers data limitations when identifying the proportion of CUs above the Red zone, and Section \@ref(recommendations) for a description of associated uncertainties. CU statuses are derived using the approaches described in Section \@ref(cu-est-methods), and are submitted to peer review, as described in Section \@ref(guidelines). See.
+Proportion-based or proportional LRPs are calculated from the proportion of CUs within an SMU that are assessed as being above the Red status zone. To be consistent with the intent of the WSP of preserving biodiversity at the CU-level, we identify an LRP at 100% of CUs having status above Red (i.e., either Amber or Green). <!--CH Sue suggested removing as she wasn't sure what happened when LRP is breached, I think. I agree the act of breaching is not entirely relevant here, but I did think ht helped explain our propotion based LRP "When any individual CU falls into the Red zone, then the LRP is considered breached."--> See Section \@ref(guidelines) for a step-wise approach for identifying LRPs that further considers data limitations when identifying the proportion of CUs above the Red zone, and Section \@ref(recommendations) for a description of associated uncertainties. CU statuses are derived using the approaches described in Section \@ref(cu-est-methods), and are submitted to peer review, as described in Section \@ref(guidelines). See.
 
 <!--CH: revserse order of principles in each section to align with Julie's new numbering-->
 Proportional LRPs are based on the best available information (Principle 1) by incorporating multiple dimensions of status through formal, peer reviewed WSP status assessments or the Pacific Salmon Status Scanner with peer review. By using status derived from the annual implementation of the Salmon Scanner, relevant and timely information is used to inform status in a way that is transparent and open. Proportional LRPs are aligned with Principle 2 to the extent that serious harm is indicated by status of any one CU being in the Red zone under the WSP, recognizing that risk of loss of stock structure can itself be a form of serious harm. Proportional LRPs are operational (Principle 3) as they are simple to calculate and communicate as a proportion of CU statuses. For SMUs where harvest is managed at the aggregate SMU scale, however, proportional LRPs are not easily incorporated into harvest control rules at that scale. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU level benchmarks to CU statuses, LRPs and SMU statuses.  Proportional LRPs are well aligned with Principle 6, being derived directly from WSP metrics of status for CUs.
@@ -88,7 +88,7 @@ A further advantage of this method is that it can easily be extended to other sp
 For example, CUs can be assessed individually when threats and responses are localized to specific watersheds, e.g., Cultus Sockeye which has unique threats to its spawning and rearing habitats. CU status can also be aggregated at various scales and across species when threats and responses are broader, e.g, for the management of numerous salmon species and CUs impacted by the Big Bar landslide of 2019.  
 
 
-In addition to proportional LRPs, we considered two LRPs on aggregate SMU-level abundances that account for component CU-level status: (1) logistic regression LRPs and (2) projection LRPs (Table \@ref(tab:candidateLRPs)), described in the following two Sections. These two LRPs rely on the relationship between observed aggregate abundances and statuses of component CUs, but differ in that logistic regression LRP rely entirely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics.  The reliability of aggregate-abundance based LRPs and their ability to represent thresholds to serious harm at the CU level depends on the strength of that underlying relationship as exhibited in observed data. These two LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To some extent uncertainty in the underlying relationship between observed aggregate abundances and CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties results in higher LRP values and vice versa, with all else remaining equal.  
+In addition to proportional LRPs, we considered two LRPs on aggregate SMU-level abundance that account for component CU-level statuses: (1) logistic regression-based LRPs, or simply, logistic regression LRPs and (2) projection-based, or simply projection LRPs (Table \@ref(tab:candidateLRPs)), which are described below. Both of these LRPs rely on the relationship between observed aggregate abundances and statuses of component CUs, but they differ in that logistic regression LRPs rely on empirical data directly whereas projection LRPs are derived from projections of CU-level population dynamics usually parameterized from empirical data.  The reliability of aggregate-abundance LRPs to represent thresholds of serious harm at the CU level depend on the strength of the underlying relationship between aggregate abundance and CU statuses as inferred from observed data. Both of these LRPs are probabilistic in nature, identifying the aggregate abundances associated with an acceptable probability of all CUs achieving status above the Red zone. To an extent uncertainty in the underlying relationship between observed aggregate abundances and CU-level statuses is represented in the probabilistic nature of these LRPs; larger uncertainties result in higher LRP values and vice versa, with all else remaining equal.  
 
 
 <!--CH: Add simple bubble diagram of proportion based LRP, aggregate abundance LRP and logistic regression LRP and projection based LRPs. This will help show that next two sections are nested within aggregate abundance LRPs-->
@@ -97,7 +97,7 @@ In addition to proportional LRPs, we considered two LRPs on aggregate SMU-level 
 
 ### Logistic regression LRPs {#logisticMethods}
 
-Logistic regression LRPs are derived from an empirically estimated relationship between CU-level statuses and aggregate SMU abundance. This method for deriving LRPs extends proportional LRPs by identifying the aggregate abundance level that has historically been associated with a specified probability of all component CUs having status above the Red zone, as approximated from status on a single metric of spawner abundances relative to a lower benchmark. For each year of observed data, CU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than the lower benchmark and 0 (failure) = all CUs did not have status greater than the lower benchmark, or at least one CU was assessed below the lower benchmark. A logistic regression is then fit to these outcomes to estimate the probability that all CUs will have statuses greater than Red as a function of aggregate SMU spawner abundances. The following logistic regression equation is used to estimate LRPs,
+Logistic regression LRPs are derived from an empirically estimated relationship between CU-level statuses and aggregate SMU abundance. This method extends the proportional LRP by identifying the aggregate abundance level that has historically been associated with all component CUs having status above the Red zone, as approximated from status on a single metric of spawner abundances relative to a lower benchmark. For each year of observed data, CU-level status is quantified as a Bernoulli variable: 1 (success) = all CUs have estimated status greater than the lower benchmark and 0 (failure) = all CUs did not have status greater than the lower benchmark, or at least one CU was assessed below the lower benchmark. A logistic regression is then fit to these outcomes to estimate the probability that all CUs will have statuses greater than Red as a function of aggregate SMU spawner abundances. The following logistic regression equation is used to estimate LRPs,
 
 \begin{equation}
   \log(\frac{p}{1-p}) = B_0 + B_1 \sum_{i}^{i=nCUs} S_{i,t}
